fix lighthouse layoutshift errors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,7 @@ body {
     border: 3px solid rgb(55, 210, 207);
     border-radius: 10px;
     width: fit-content;
-    height: auto;
+    height: 250px;
     padding: 20px;
     margin: auto;
     margin-top: 30px;
